# mesh-adaptation-for-ibm

./: CMakeLists.txt  README.md
cmake/: BuildMainMeshAdapter.cmake  CompilerFlagsGNU.cmake  ConfigureHDF5.cmake  ConfigureMPI.cmake  DefineBuildType.cmake  DefineMacros.cmake  DefineOptions.cmake  DefineOutputFolders.cmake
cmake/macros/: SubfolderList.cmake
ini/: NACA0012-Shell-AoA-00.00.stl  NACA0012-Solid-AoA-00.00.stl  parameter-naca0012.ini
src/: main.h  meshadapter.f90
src/globals/: CMakeLists.txt
src/globals/src/: globals.f90
src/meshadapter/: CMakeLists.txt
src/meshadapter/src/geometry-import/: geometry-import-stl.f90  geometry-import-vars.f90  geometry-import.f90
src/meshadapter/src/geometry-main/: geometry-main-methods.f90  geometry-main-vars.f90
src/meshadapter/src/mesh-adapter/: mesh-adapter-vars.f90  mesh-adapter.f90
src/meshadapter/src/mesh-builtin/: mesh-builtin-mappings3d.f90  mesh-builtin-stretching3d.f90  mesh-builtin-vars.f90  mesh-builtin.f90
src/meshadapter/src/mesh-elementslist/: mesh-elementslist-export.f90  mesh-elementslist-vars.f90  mesh-elementslist.f90
src/meshadapter/src/mesh-export/: mesh-export-hdf5.f90  mesh-export-tecplot.f90  mesh-export-vars.f90  mesh-export.f90
src/meshadapter/src/mesh-geometry/: mesh-geometry-distribution.f90  mesh-geometry-vars.f90
src/meshadapter/src/mesh-main/: mesh-main-methods.f90  mesh-main-vars.f90
src/meshadapter/src/mesh-refinement/: mesh-refinement-connectivity.f90  mesh-refinement-flagging.f90  mesh-refinement-splitting.f90  mesh-refinement-vars.f90  mesh-refinement.f90
src/utilities/configfiles-tools/: CMakeLists.txt
src/utilities/configfiles-tools/src/: configfiles-tools.f90
src/utilities/data-structures/: CMakeLists.txt
src/utilities/data-structures/src/: arrays-sorting.f90  buckets-array.f90  data-structures.f90  hash-tables.f90  kdtrees-bucket.f90  linked-lists.f90  strings-handling.f90
src/utilities/hdf5-tools/: CMakeLists.txt
src/utilities/hdf5-tools/src/: hdf5-tools.f90
src/utilities/numerics-tools/: CMakeLists.txt
src/utilities/numerics-tools/src/: computational-geometry.f90  constants.f90  numerics-tools.f90  polynomial-interpolation.f90  polynomial-roots.f90  vector-algebra.f90
