#======================================================================================================================#
# CMAKE BUILD SYSTEM
#======================================================================================================================#
#
#----------------------------------------------------------------------------------------------------------------------#
CMAKE_MINIMUM_REQUIRED(VERSION 3.12...3.18)
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# Project Information
#----------------------------------------------------------------------------------------------------------------------#
PROJECT(MAIN)
ENABLE_LANGUAGE(C)
ENABLE_LANGUAGE(CXX)
ENABLE_LANGUAGE(Fortran)
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# INSTALL PREFIX 
#----------------------------------------------------------------------------------------------------------------------#
SET(MAIN_PREFIX_ROOT "/software/${CMAKE_PROJECT_NAME}")
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# CMake verbosity
#----------------------------------------------------------------------------------------------------------------------#
SET(CMAKE_VERBOSE_MAKEFILE OFF)
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# Cmake output of compile commands during generation
#----------------------------------------------------------------------------------------------------------------------#
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# Include other configurations
#----------------------------------------------------------------------------------------------------------------------#
SET(CMAKE_MODULE_PATH "${MAIN_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# User defined variables
#----------------------------------------------------------------------------------------------------------------------#
INCLUDE(DefineOptions)
INCLUDE(DefineMacros)
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# Output Folders
#----------------------------------------------------------------------------------------------------------------------#
INCLUDE(DefineOutputFolders)
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# Build Type
#----------------------------------------------------------------------------------------------------------------------#
INCLUDE(DefineBuildType)
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# Compiler Flags
#----------------------------------------------------------------------------------------------------------------------#
INCLUDE(CompilerFlagsGNU)
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# EXTERNAL LIBRARIES
#----------------------------------------------------------------------------------------------------------------------#
INCLUDE(ConfigureMPI)
INCLUDE(ConfigureHDF5)
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# Adding Libraries
#----------------------------------------------------------------------------------------------------------------------#
INCLUDE_DIRECTORIES(src)
#----------------------------------------------------------------------------------------------------------------------#
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/globals/)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/meshadapter/)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/utilities/configfiles-tools/)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/utilities/data-structures/)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/utilities/hdf5-tools/)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src/utilities/numerics-tools/)
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# Build MAIN-PREPROCESSOR
#----------------------------------------------------------------------------------------------------------------------#
INCLUDE(BuildMainMeshAdapter)
#----------------------------------------------------------------------------------------------------------------------#
