#----------------------------------------------------------------------------------------------------------------------#
# GLOBALS source files
#----------------------------------------------------------------------------------------------------------------------#
FILE(GLOB SOURCES_GLOBALS
  "src/*.f90"
)
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# GLOBALS LIBRARY
#----------------------------------------------------------------------------------------------------------------------#
PROJECT(GlobalsLib)
ADD_LIBRARY(${PROJECT_NAME} OBJECT ${SOURCES_GLOBALS})
#----------------------------------------------------------------------------------------------------------------------#
# TARGET LINKED LIBRARIES
#----------------------------------------------------------------------------------------------------------------------#
# There are no linked libraries
#----------------------------------------------------------------------------------------------------------------------#
# TARGET INCLUDE DIRECTORIES
#----------------------------------------------------------------------------------------------------------------------#
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
#----------------------------------------------------------------------------------------------------------------------#
# GLOBAL VARIABLES
#----------------------------------------------------------------------------------------------------------------------#
SET(LINKEDLIBS_GLOBALS ${PROJECT_NAME} CACHE INTERNAL "")
SET(INCLUDE_DIRECTORIES_GLOBALS ${PROJECT_BINARY_DIR} CACHE INTERNAL "")
#----------------------------------------------------------------------------------------------------------------------#
# TARGET PROPERTIES
#----------------------------------------------------------------------------------------------------------------------#
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS ${MAIN_FLAGS_OVERALL})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIRECTORIES_GLOBALS})
#----------------------------------------------------------------------------------------------------------------------#
