#----------------------------------------------------------------------------------------------------------------------#
# NUMERICS_TOOLS SOURCE FILES
#----------------------------------------------------------------------------------------------------------------------#
FILE(GLOB SOURCES_NUMERICS_TOOLS
  "src/*.f90"
)
#----------------------------------------------------------------------------------------------------------------------#
#
#----------------------------------------------------------------------------------------------------------------------#
# NUMERICS_TOOLS LIBRARY
#----------------------------------------------------------------------------------------------------------------------#
PROJECT(NumericsToolsLib)
ADD_LIBRARY(${PROJECT_NAME} OBJECT ${SOURCES_NUMERICS_TOOLS})
#----------------------------------------------------------------------------------------------------------------------#
# TARGET LINKED LIBRARIES
#----------------------------------------------------------------------------------------------------------------------#
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${LINKEDLIBS_GLOBALS})
#----------------------------------------------------------------------------------------------------------------------#
# TARGET INCLUDE DIRECTORIES
#----------------------------------------------------------------------------------------------------------------------#
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${INCLUDE_DIRECTORIES_GLOBALS})
#----------------------------------------------------------------------------------------------------------------------#
# GLOBAL VARIABLES
#----------------------------------------------------------------------------------------------------------------------#
SET(LINKEDLIBS_NUMERICS_TOOLS ${PROJECT_NAME} CACHE INTERNAL "")
SET(INCLUDE_DIRECTORIES_NUMERICS_TOOLS ${PROJECT_BINARY_DIR} CACHE INTERNAL "")
#----------------------------------------------------------------------------------------------------------------------#
# TARGET PROPERTIES
#----------------------------------------------------------------------------------------------------------------------#
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS ${MAIN_FLAGS_OVERALL})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CMAKE_Fortran_MODULE_DIRECTORY ${INCLUDE_DIRECTORIES_NUMERICS_TOOLS})
#----------------------------------------------------------------------------------------------------------------------#
